<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.resuadam.burguerbuilderlistview.view.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.75"
            android:gravity="center_vertical"
            android:text="@string/lblBurguer"
            android:textSize="32sp" />
        <Button
            android:id="@+id/btPrices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lblPrices" />
    </LinearLayout>
    <ListView
        android:id="@+id/lvFixedIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"/>
    <ListView
        android:id="@+id/lvIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.15"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/lblTotal"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/lblCurrency"
            android:textSize="24sp" />
        <Button
            android:id="@+id/btIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/lblIngredientSelection" />
    </LinearLayout>
</LinearLayout>